# cctv-malang-menubar

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs
src-tauri/src/data/: cameras.json
ui/: index.html
